--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ decorator==5.1.1
 executing==1.2.0
 fastjsonschema==2.16.3
 fonttools==4.39.4
+imbalanced-learn==0.10.1
+imblearn==0.0
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
 ipykernel==6.23.1
